Replace ask_y_n() with ask_yes_no().
The new version localizes the default value, and expects localized input from
the use, when a translation is available. Its second argument, when passed,
determines whether the default is affirmative (yes) or negative (no). The user
may input a substring of either answer, such as "y" for "Yes" or "j" for "Ja".
Translators therefore must be sure that the first char of each answer is
distinct, at least for now.

The ask_y_n() method is deprecated with a warning, and its use in Sqitch
itself replaced with calls to `ask_yes_no(). This change required changing the
way MockOutput handles mock prompts, as well.

Based on a suggestion by @tiguchi in #449.

--- a/Changes
+++ b/Changes
@@ -27,6 +27,11 @@ Revision history for Perl extension App::Sqitch
        `sqitch-authentication`, as well as `$SNOWSQL_PRIVATE_KEY_PASSPHRASE`
        in `sqitch-environment`. Thanks to Casey Largent for figuring it out
        (#441).
+     - Added the `ask_yes_no()` method as a reaplcement for `ask_y_n()`, which
+       is now deprecated. The new method expects localized responses from the
+       user when translations are provided. Defaults to the English "yes" and
+       "no" when no translation is available. Suggested by German translator
+       Thomas Iguchi (#449).
 
 0.9999 2019-02-01T15:29:40Z
      [Bug Fixes]
